# fn-to-fut

./: Cargo.toml
src/: error.rs  lib.rs  lifeguard.rs  sleeperwaker.rs
tests/: tests.rs
