[package]
name = "fn-to-fut"
version = "0.1.0"
authors = ["Zac Burns <That3Percent@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boxfnonce = "0.1.1"
futures = "0.3.4"

[dev-dependencies]
tokio = "0.2.13"